--- a/.github/pr-rules.yml
+++ b/.github/pr-rules.yml
@@ -11,8 +11,8 @@ mergeable:
           enabled: true
           message: 'PRs must be associated to a milestone'
       - do: project
-        must_include:
-          regex: '.*'
+        no_empty:
+          enabled: true
           message: 'PRs must be associated to a project'          
     fail:
       - do: results_as_review
